--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <div id="about-btn" class="card-action">
                         <div class="about-btn">
                             <!-- DOWNLOAD CV BUTTON -->
-                            <a href="nam_cv.pdf" class="btn waves-effect">Download CV</a>
+                            <a href="https://drive.google.com/file/d/1zLihVaC4MrXYn9KMcfmDlDvYm0s2ADbO/view?usp=sharing" class="btn waves-effect">Download CV</a>
                             <!-- CONTACT BUTTON -->
                             <a href="#contact" class="btn waves-effect">Liên hệ</a>
                         </div>
@@ -271,37 +271,6 @@
         <div id="timeline-education">
 
             <!-- FIRST TIMELINE -->
-            <div class="timeline-block">
-                <!-- DOT -->
-                <div class="timeline-dot"><h6>P</h6></div>
-                <!-- TIMELINE CONTENT -->
-                <div class="card timeline-content">
-                    <div class="card-content">
-                        <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Tiểu học và THCS</h6>
-                        <!-- TIMELINE TITLE INFO -->
-                        <div class="timeline-info">
-                            <h6>
-                                <small>TH&THCS Đông Giang</small>
-                            </h6>
-                            <h6>
-                                <small>2006 - 2015</small>
-                            </h6>
-                        </div>
-                        <!-- TIMELINE PARAGRAPH -->
-                        <p>
-                            Lớn lên tại vùng quê lúa bắc bộ, tôi học tập và vui chơi cùng bạn bè tại một trường vùng quê bắc bộ và tốt nghiệp THCS loại giỏi.
-
-                        </p>
-                        <!-- BUTTON TRIGGER MODAL -->
-                        <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-1">
-                            <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SECOND TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
                 <div class="timeline-dot"><h6>H</h6></div>
@@ -332,7 +301,7 @@
                 </div>
             </div>
 
-            <!-- THIRD TIMELINE -->
+            <!-- SECOND TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
                 <div class="timeline-dot"><i class="fa fa-graduation-cap"></i></div>
@@ -390,26 +359,26 @@
                                     <h6 class="text-center">Chuyên môn</h6>
                                 </div>
                                 <!-- FIRST SKILL BAR -->
-                                <div class="skillbar" data-percent="60%">
+                                <div class="skillbar" data-percent="40%">
                                     <div class="skillbar-title"><span>HTML/CSS/JS</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">BEGINNER</div>
                                 </div>
                                 <!-- SECOND SKILL BAR  -->
-                                <div class="skillbar" data-percent="50%">
+                                <div class="skillbar" data-percent="80%">
                                     <div class="skillbar-title"><span>PHP</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">BEGINNER</div>
                                 </div>
                                 <!-- THIRD SKILL BAR  -->
                                 <div class="skillbar" data-percent="50%">
-                                    <div class="skillbar-title"><span>ASP.NET</span></div>
+                                    <div class="skillbar-title"><span>Laravel</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">BEGINNER</div>
                                 </div>
                                 <!-- FOURTH SKILL BAR  -->
                                 <div class="skillbar" data-percent="50%">
-                                    <div class="skillbar-title"><span>Java</span></div>
+                                    <div class="skillbar-title"><span>C#/.Net</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">BEGINNER</div>
                                 </div>
@@ -523,6 +492,36 @@
                         </p>
                         <!-- BUTTON TRIGGER MODAL -->
                         <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-4">
+                            <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SECOND TIMELINE -->
+            <div class="timeline-block">
+                <!-- DOT -->
+                <div class="timeline-dot"><i class="fa fa-globe" aria-hidden="true"></i></div>
+                <!-- TIMELINE CONTENT -->
+                <div class="card timeline-content">
+                    <div class="card-content">
+                        <!-- TIMELINE TITLE -->
+                        <h6 class="timeline-title">Open Education</h6>
+                        <!-- TIMELINE TITLE INFO -->
+                        <div class="timeline-info">
+                            <h6>
+                                <small>Sun Asterisk Inc</small>
+                            </h6>
+                            <h6>
+                                <small>12/2021 - 04/2022</small>
+                            </h6>
+                        </div>
+                        <!-- TIMELINE PARAGRAPH -->
+                        <p>
+                            Tham gia quá trình thực tập PHP Developer tại bộ phận đào tạo TIV của công ty Sun* Inc.
+                        </p>
+                        <!-- BUTTON TRIGGER MODAL -->
+                        <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-5">
                             <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                         </a>
                     </div>
@@ -663,6 +662,34 @@
         </div>
     </div>
 
+    <!--MODAL FIVE-->
+    <div class="modal fade" id="myModal-5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-4">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <!--MODAL HEADER-->
+                <div class="modal-header  text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true"><i class="fa fa-close"></i></span></button>
+                    <h4 class="modal-title" id="myModalLabel-4">Open Education</h4>
+                    <h6>
+                        <small>12/2021 - 04/2022</small>
+                    </h6>
+                </div>
+                <!--MODAL BODY-->
+                <div class="modal-body">
+                    <h6> Thực tập sinh </h6>
+                    <p>
+                        Tham gia quá trình thực tập PHP Developer tại bộ phận đào tạo TIV của công ty Sun* Inc.
+                    </p>
+                </div>
+                <!--MODAL FOOTER-->
+                <div class="modal-footer">
+                    <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+                </div>
+            </div>
+        </div>
+    </div>
+
 </section>
 <!--==========================================
                   PORTFOLIOS
@@ -682,6 +709,7 @@
                 <!--CATEGORIES-->
                 <li class="waves-effect list-shuffle"><a class="cate" href="#content" data-toggle="tab">Content</a></li>
                 <li class="waves-effect list-shuffle"><a class="cate" href="#wordpress" data-toggle="tab">Wordpress</a></li>
+                <li class="waves-effect list-shuffle"><a class="cate" href="#laravel" data-toggle="tab">Laravel</a></li>
                 <li class="waves-effect list-shuffle"><a class="cate" href="#btl" data-toggle="tab">Bài tập lớn</a></li>
                 <li class="waves-effect list-shuffle"><a class="cate" href="#other" data-toggle="tab">Sản phẩm cá nhân</a></li>
             </ul>
@@ -894,12 +922,37 @@
                         </figure>
                     </div>
                 </div>
+
+                <!-- Laravel -->
+                <div id="laravel">
+                    <!--CATEGORY CONTENT ONE SMALL-->
+                    <div class="col-md-6 col-sm-6 col-xs-12 grid inLeft">
+                        <figure class="port-effect-scale">
+                            <img src="images/portfolios/bookstore.jpg" class="img-responsive" alt="ATM simulator"/>
+                            <figcaption>
+                                <h2><span>Book Store</span></h2>
+                                <p>Trang bán hàng đơn giản sử dụng Laravel</p>
+                                <a href="https://github.com/NamBZ/php_hn_oe48" rel="noreferrer nofollow" target="_blank" title="Book Store Laravel" />Xem thêm</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <!--CATEGORY CONTENT TWO SMALL-->
+                    <div class="col-md-6 col-sm-6 col-xs-12 grid inRight">
+                        <figure class="port-effect-scale">
+                            <img src="images/portfolios/myblog.jpg" class="img-responsive" alt="des cryto"/>
+                            <figcaption>
+                                <h2><span>My Blog - Mini Project PHP</span></h2>
+                                <p>Trang Blog đơn giản bằng PHP MVC</p>
+                                <a href="https://github.com/NamBZ/mini_project" rel="noreferrer nofollow" target="_blank" title="My Blog" />Xem thêm</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
             </div>
             <!--PORTFOLIOS ADD GALLERY BUTTON-->
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
-                    <button id="add-more" class="center-block btn-large waves-effect"><i id="port-add-icon"
-                                                                                         class="fa fa-plus"></i>
+                    <button id="add-more" class="center-block btn-large waves-effect"><i id="port-add-icon" class="fa fa-plus"></i>
                     </button>
                 </div>
             </div>
